--- a/.github/workflows/update-citations.yml
+++ b/.github/workflows/update-citations.yml
@@ -2,7 +2,8 @@ name: Update Google Scholar Citations
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Every day at midnight UTC
+    - cron: '0 16 * * *'  # 东八区 00:00（UTC 16:00 前一天）
+    - cron: '0 4 * * *'   # 东八区 12:00（UTC 04:00）
   workflow_dispatch:      # Allow manual trigger
 
 jobs:
